--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: ruby
 rvm:
   - 2.2
+addons:
+  apt:
+    packages:
+    - libcurl4-openssl-dev
 
 install: 
   - bundle install
 
 script:
   - bundle exec jekyll build
-  # Ignore external certificate and SSL connect errors, ignore '#' and '#top'
-  - htmlproofer --allow-hash-href --url-ignore='#top' _site/
+  # Ignore external certificate errors from https://ci.commonwl.org, ignore '#' and '#top'
+  - htmlproofer --allow-hash-href --url-ignore="#top,/https://ci.commonwl.org/" _site/
 
